--- a/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
@@ -681,8 +681,9 @@
 
         <p></p>
         <p></p>
+        
 
-        <div id="ssjg" style="display:none;">
+        <div id="ssjg" style=" padding-top:50px;">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="panel panel-default">
@@ -693,20 +694,20 @@
                             <table class="table">
                                 <tbody>
                                     <tr>
-                                        <td>总费用：<span id="TOTAL_COSTS"></span></td>
-                                        <td>自费费用：<span id="ZF_COSTS"></span></td>
-                                        <td>合理费用：<span id="TOTAL_CHAGE"></span></td>
-                                        <td>实际补偿金额：<span id="D506_23"></span></td>
+                                        <td>总费用：<span id="O_TOTAL_COSTS"></span></td>
+                                        <td>自费费用：<span id="O_ZF_COSTS"></span></td>
+                                        <td>合理费用：<span id="O_TOTAL_CHAGE"></span></td>
+                                        <td>帐户补偿：<span id="O_OUTP_FACC"></span></td>
                                     </tr>
                                     <tr>
-                                        <td>核算补偿金额[实际补偿合计额)：<span id="D506_18"></span></td>
-                                        <td>本次起伏线：<span id="BEGINPAY"></span></td>
-                                        <td>报销比例：<span id="SCALE"></span></td>
-                                        <td>大病支付额：<span id="HEAV_REDEEM_SUM"></span></td>
+                                        <td>核算补偿金额[实际补偿合计额)：<span id="O_D503_09"></span></td>
+                                        <td>基金补偿：<span id="O_OUT_JJ"></span></td>
+                                        <td>家庭账户支出：<span id="D601_17_OUT"></span></td>
+                                        <td>西药补偿金额：<span id="XY_OUT"></span></td>
                                     </tr>
                                     <tr>
-                                        <td>单次补偿合计：<span id="REDEEM_TOTAL"></span></td>
-                                        <td></td>
+                                        <td>中草药补偿金额：<span id="ZCAOY_OUT"></span></td>
+                                        <td>中成药补偿金额：<span id="ZCHENGY_OUT"></span></td>
                                         <td></td>
                                         <td></td>
                                     </tr>
