--- a/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/mzbc.html
@@ -672,7 +672,7 @@
         <div>
             <ul style="list-style:none;">
                 <li style="float:left;width:20%;"><button type="button" class="btn btn-default" onclick="javacript: tryCal();">试算</button></li>
-                <li style="float:left;width:20%;"><button type="button" class="btn btn-default">收费</button></li>
+                <li style="float:left;width:20%;"><button type="button" class="btn btn-default" onclick="javacript: shoufei();">收费</button></li>
                 <li style="float:left;width:20%;"><button type="button" class="btn btn-default" onclick="javacript: chongzheng();">冲正</button></li>
                 <li style="float:left;width:20%;"><button type="button" class="btn btn-default">打印补偿票据</button></li>
 
@@ -784,6 +784,9 @@
 
         }
 
+        //收费参数，根据先试算而来
+        var shoufeicanshu = "";
+
         //试算
         function tryCal() {
             var checked = getChecked(); //获取被选中的信息
@@ -881,15 +884,55 @@
                     if (retJson.flag == '0') {
                         alert("试算成功，请查看试算结果");
                         var info = retJson.msg;
+                        //缓存收费参数
+                        shoufeicanshu = retJson.msg["MZBC_SHOUFEI"];
                         //绑定试算结果
-                        $("#ssjg").css("display", "block");
                         for (var item in info) {
                             var objTest = $("#" + item);
                             if (objTest != null) {
                                 $("#" + item).html(info[item]);
                             }
                         }
+                        
 
+                    } else {
+                        alert(retJson.msg);
+                    }
+
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown) {
+                    closeMask();
+                    alert(textStatus + ":" + errorThrown);
+                }
+            });
+        }
+
+        function shoufei() {
+            if (shoufeicanshu == "") {
+                alert("无试算信息，请先试算");
+                return;
+            }
+
+            var USER_ID = getCookie("USER_ID");
+            var pMap = {};
+            pMap["USER_ID"] = USER_ID;
+            pMap["PARAM"] = shoufeicanshu; //收费参数，根据第一步试算缓存而来
+            var pJson = map2Json(pMap);
+            showMask("正在收费...");
+            $.ajax({
+                type: "Post",
+                url: "xnhservice.asmx/charge",
+                data: pJson,
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (data) {
+                    closeMask();
+                    //返回的数据用data.d获取内容
+                    var retVal = data.d;
+                    var retJson = getJsonObj(retVal);
+                    if (retJson.flag == '0') {
+                        var info = retJson.msg;
+                        alert(retJson.msg);
                     } else {
                         alert(retJson.msg);
                     }
