住院查询明细

--- a/VSWork/xnh_new_2/ApiMonitor/pages/zymxsc.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/zymxsc.html
@@ -189,42 +189,60 @@
                         <div class="text-muted bootstrap-admin-box-title">明细</div>
                     </div>
                     <div class="bootstrap-admin-panel-content">
-                        <table class="table">
 
-                            <tbody>
+                        <table class="table" id="zymx">
+                            <thead>
                                 <tr>
-                                    <td>登录名：刘德华</td>
-                                    <td>所在单位ID：xxxx</td>
-                                    <td>电话：123456789</td>
-                                    <td>单位名称：4564687631xxadas</td>
+                                    <th>HIS项目编码</th>
+                                    <th>项目名称</th>
+                                    <th>项目单价</th>
+                                    <th>项目数量</th>
+                                    <th>项目总价格</th>
+                                    <th>记账时间</th>
+                                    <th>医嘱编号</th>
+                                    <th>上传标志</th>
+                                    <th>规格</th>
+                                    <th>单位</th> 
+                                    <th>操作</th>
                                 </tr>
-                                <tr>
-                                    <td>机构详细地址编码：1235</td>
-                                    <td>机构类型：乡</td>
-                                    <td>机构级别：村卫生室</td>
-                                    <td>机构地区编码：5464</td>
-                                </tr>
-                                <tr>
-                                    <td>补偿年度：2016</td>
-                                    <td>本县芯片卡刷卡授权：有刷卡权限</td>
-                                    <td>本县刷卡标志是够开启：开启</td>
-                                    <td>此医疗机构刷卡权限是否开启：刷</td>
-                                </tr>
-                                <tr>
-                                    <td>是否开启药品最高限价：开启</td>
-                                    <td>日记账药品删除期限：22</td>
-                                    <td>本县保障起始时间：2016-10-10</td>
-                                    <td>本县保障结束时间：2016-12-10</td>
-
-                                </tr>
-                                <tr>
-                                    <td>打印明细是否汇总：汇总</td>
-                                    <td>是否启用单次刷卡时间限制：不启用</td>
-                                    <td>单次刷卡时间：10</td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
+                            </thead>
+                            <tbody id="mxlist"></tbody>
                         </table>
+                        <!--<table class="table">
+                            <tbody>-->
+                                <!--<tr>
+                    <td>登录名：刘德华</td>
+                    <td>所在单位ID：xxxx</td>
+                    <td>电话：123456789</td>
+                    <td>单位名称：4564687631xxadas</td>
+                </tr>-->
+                                <!--<tr>
+                    <td>机构详细地址编码：1235</td>
+                    <td>机构类型：乡</td>
+                    <td>机构级别：村卫生室</td>
+                    <td>机构地区编码：5464</td>
+                </tr>
+                <tr>
+                    <td>补偿年度：2016</td>
+                    <td>本县芯片卡刷卡授权：有刷卡权限</td>
+                    <td>本县刷卡标志是够开启：开启</td>
+                    <td>此医疗机构刷卡权限是否开启：刷</td>
+                </tr>
+                <tr>
+                    <td>是否开启药品最高限价：开启</td>
+                    <td>日记账药品删除期限：22</td>
+                    <td>本县保障起始时间：2016-10-10</td>
+                    <td>本县保障结束时间：2016-12-10</td>
+
+                </tr>
+                <tr>
+                    <td>打印明细是否汇总：汇总</td>
+                    <td>是否启用单次刷卡时间限制：不启用</td>
+                    <td>单次刷卡时间：10</td>
+                    <td></td>
+                </tr>-->
+                            <!--</tbody>
+                        </table>-->
                     </div>
                 </div>
             </div>
@@ -257,7 +275,7 @@
                 }
 
                 showMask("正在查询，请稍后...");
-
+                batchUpload
                 $.ajax({
                     type: "Post",
                     url: "xnhservice.asmx/ydjwjs",
@@ -290,7 +308,7 @@
                                     + '        <a>结算收费</a>                              '
                                     + '    </td>                                            '
                                     + '    <td>                                             '
-                                    + '        <a>查看明细项目</a>                          '
+                                    + '        <button type="button" class="btn btn-default" id="Upload">查看明细项目</button>                          '
                                     + '        <br />                                       '
                                     + '        <a></a>                                      '
                                     + '    </td>                                            '
@@ -365,6 +383,66 @@
                 }
             }
         });
+        ///查看明细项目
+        $("#Upload").on("click", function () {  //按钮触发不了
+           
+            var checkedVal = "";   //怎么把住院流水号放进去？ 
+                    showMask("正在处理，请稍后...");
+                    $.ajax({
+                        type: "Post",
+                        url: "xnhservice.asmx/zymxcx",
+                        data: "{'data':'" + checkedVal + "'}",
+                        contentType: "application/json; charset=utf-8",
+                        dataType: "json",
+                        success: function (data) {
+                            closeMask();
+                            //返回的数据用data.d获取内容
+                            var retVal = data.d;
+                            //遍历json数组操作
+                            var retJson = getJsonObj(retVal);
+                            if (retJson.flag == '0') {
+                                var json = retJson.msg;
+                                $("#zymx tbody tr").detach();
+                                for (var item in json.data) {
+                                    var row = json.data[item];
+
+                                    var trId = $.trim(row['REC_NO']);
+
+                                    var trStr = '<tr class="example" id="' + trId + '" >';//动态拼接table
+                                    // var html = '';
+                                    //for (var key in row) {//
+                                    trStr += '<td id="' + trId + '_item_code">' + $.trim(row['item_code']) + '</td>';//数据表的主键值 门诊流水号
+                                    //}
+                                    trStr += '<td id="' + trId + '_item_code">' + row['item_code'] + '</td>';    //项目编码
+                                    trStr += '<td id="' + trId + '_item_name">' + row['item_name'] + '</td>';  //名称
+                                    trStr += '<td id="' + trId + '_price">' + row['price'] + '</td>';   //项目单价
+                                    trStr += '<td id="' + trId + '_qty">' + row['qty'] + '</td>';         //项目数量
+                                    trStr += '<td id="' + trId + '_total">' + row['total'] + '</td>'; //项目总价格
+                                    trStr += '<td id="' + trId + '_bill_time">' + row['bill_time'] + '</td>'; //记账时间
+                                    trStr += '<td id="' + trId + '_pre_no">' + row['pre_no'] + '</td>';         //医嘱编号
+                                    trStr += '<td id="' + trId + '_up_flag">' + row['up_flag'] + '</td>'; //上传标志
+                                    trStr += '<td id="' + trId + '_standard">' + row['standard'] + '</td>';//规格
+                                    trStr += '<td id="' + trId + '_small_unit">' + row['small_unit'] + '</td>';//单位
+                                    trStr += '<td class="center">                              '
+                                    + '        <a>作废收费项目</a>                                  '
+                                    + '    </td> ';
+                                    $(trStr).appendTo("#mxlist");
+                                }
+                                //todo：根据需要绑定解析和绑定前台数据
+
+                            } else {
+                                alert("查询失败：" + retJson.msg);
+                            }
+
+                        },
+                        error: function (err) {
+                            closeMask();
+                            alert(err.toString());
+                        }
+                    });
+                
+            }
+       );
     </script>
 </body>
 
