--- a/VSWork/xnh_new_2/ApiMonitor/pages/czlp.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/czlp.html
@@ -125,7 +125,7 @@
                                     <a href="#" class="dropdown-toggle" data-hover="dropdown">其他 <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
                                         <li role="presentation" class="dropdown-header">#1</li>
-                                        <li><a href="#">菜单1</a></li>
+                                        <li><a href="xnhdz.html">新农合药品对照</a></li>
                                         
                                         <li role="presentation" class="divider"></li>
                                         <li role="presentation" class="dropdown-header">#2</li>
