--- a/VSWork/xnh_new_2/ApiMonitor/pages/zymxsc.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/zymxsc.html
@@ -124,7 +124,7 @@
                                 <a href="#" class="dropdown-toggle" data-hover="dropdown">其他 <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li role="presentation" class="dropdown-header">#1</li>
-                                    <li><a href="#">菜单1</a></li>
+                                    <li><a href="xnhdz.html">新农合药品对照</a></li>
 
                                     <li role="presentation" class="divider"></li>
                                     <li role="presentation" class="dropdown-header">#2</li>
@@ -353,9 +353,9 @@
         });
 
         ///查看明细项目
-        function ckmx(REG_NO) {  //按钮触发不了？
+        function ckmx(REG_NO) {  
 
-            var checkedVal = REG_NO;   //怎么把住院流水号放进去？ 
+            var checkedVal = REG_NO;   //把住院流水号放进去
             showMask("正在处理，请稍后...");
             $.ajax({
                 type: "Post",
