--- a/VSWork/xnh_new_2/ApiMonitor/pages/czlp.html
+++ b/VSWork/xnh_new_2/ApiMonitor/pages/czlp.html
@@ -157,50 +157,21 @@
 
                             <p></p>
 
-                            <table class="table table-striped table-bordered" id="example">
+                            <table class="table table-striped table-bordered" id="czlp">
                                 <thead>
                                     <tr>
-                                        <th>住院号</th>
                                         <th>姓名</th>
-                                        <th>费用</th>
-                                        <th>农合报销信息</th>
+                                        <th>住院号</th>
+                                        <th>住院登记流水号</th>
+                                        <th>住院总费用</th>
+                                        <th>住院可补偿金额</th>
+                                        <th>住院自费费用 </th>
+                                        <th>地区编码</th>
                                         <th>操作</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="odd gradeX">
-                                        <td>562148</td>
-                                        <td>刘德华</td>
-                                        <td>288.23</td>
-                                        <td class="center">56.88</td>
-                                        <td class="center">
-                                            <a>结算冲正</a>
-                                            <br />
-                                            <a>滞后理赔</a>
-                                        </td>
-                                    </tr>
-                                    <tr class="even gradeC">
-                                        <td>562147</td>
-                                        <td>张学友</td>
-                                        <td>2356.22</td>
-                                        <td class="center">565.6</td>
-                                        <td class="center">
-                                            <a>结算冲正</a>
-                                            <br />
-                                            <a>滞后理赔</a>
-                                        </td>
-                                    </tr>
-                                    <tr class="odd gradeA">
-                                        <td>562146</td>
-                                        <td>郭富城</td>
-                                        <td>366.22</td>
-                                        <td class="center">65.5</td>
-                                        <td class="center">
-                                            <a>结算冲正</a>
-                                            <br />
-                                            <a>滞后理赔</a>
-                                        </td>
-                                    </tr>
+                                    
                                 </tbody>
                             </table>
                             
@@ -223,6 +194,7 @@
             //列表信息从HIS查，HIS提供接口
             //明细（也是从HIS取）
             //加个输入框筛选，字段由HIS定；
+            var buffer = null;
             $('#queryBtn').bind('keyup', function (event) {
                 if (event.keyCode == "13") {
                     var query = $("#queryBtn").val();
@@ -235,7 +207,7 @@
 
                     $.ajax({
                         type: "Post",
-                        url: "xnhservice.asmx/czlpcx",
+                        url: "xnhservice.asmx/czlp",
                         data: "{'query':'" + query + "'}",
                         contentType: "application/json; charset=utf-8",
                         dataType: "json",
@@ -245,8 +217,29 @@
                             var retVal = data.d;
                             //遍历json数组操作
                             var retJson = getJsonObj(retVal);
+                            buffer = retJson;
                             if (retJson.flag == '0') {
-                                var json = retJson.msg;
+                                var dataJson = buffer.msg.data;//buffer.msg.data[0]["NAME"]
+                                $("#czlp tbody tr").detach();
+
+                                for (var i = 0; i < dataJson.length; i++) {
+                                    var row =
+                                         '<tr class="odd gradeX">                               '
+                                        + '    <td>' + dataJson[i]["NAME"] + '</td>                                        '
+                                        + '    <td> ' + dataJson[i]["IP_NO"] + '</td>              '
+                                        + ' <td> ' + dataJson[i]["D505_02"] + ' </td>              '
+                                        + ' <td> ' + dataJson[i]["TOTAL_COSTS"] + ' </td>           '
+                                        + ' <td> ' + dataJson[i]["TOTAL_CHAGE"] + ' </td>           '
+                                        + ' <td> ' + dataJson[i]["ZF_COSTS"] + ' </td>           '
+                                        + ' <td> ' + dataJson[i]["AREA_CODE"] + ' </td>           '
+                                        + '    <td class="center">                              '
+                                        + '        <a>冲正</a>                                  '
+                                        + '        <br />                                       '
+                                        + '        <a>打印发票</a>                                  '
+                                        + '    </td>                                            '
+                                        + '</tr>                                                '
+                                    $("#czlp tbody").append(row);
+                                }
 
                                 //todo：根据需要绑定解析和绑定前台数据
 
